[gd_scene load_steps=4 format=3 uid="uid://8h2jprkpepxx"]

[ext_resource type="Script" path="res://Skills/Fireball/Skill.gd" id="1_6x8u1"]

[sub_resource type="Animation" id="Animation_3tmvv"]
resource_name = "Active"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IconButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.517633, 0.68302, 0.659754),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m66ib"]
_data = {
"Active": SubResource("Animation_3tmvv")
}

[node name="Skill" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
scale = Vector2(0.194194, 0.194194)
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_6x8u1")

[node name="IconButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m66ib")
}

[connection signal="button_down" from="IconButton" to="." method="_on_icon_button_button_down"]
[connection signal="mouse_entered" from="IconButton" to="." method="_on_icon_button_mouse_entered"]
[connection signal="mouse_exited" from="IconButton" to="." method="_on_icon_button_mouse_exited"]
[connection signal="pressed" from="IconButton" to="." method="_on_icon_button_pressed"]
